# Estudo-Eng.Dados-Projeto-RFM

./: .gitignore  README.md  atividade.ipynb  pyproject.toml  rfm.csv
tutorial-RFM-aula-dados/: aula01.ipynb  pyproject.toml
