[tool.poetry]
name = "atividade-engenharia-dados"
version = "0.1.0"
description = ""
authors = ["Andrew <andrew.oliveiraa13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
squarify = "^0.4.4"
plotly = "^6.0.1"
scikit-learn = "^1.6.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
